// Copyright (C) 2018 go-gt authors
//
// This file is part of the go-gt library.
//
// the go-gt library is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// the go-gt library is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with the go-gt library.  If not, see <http://www.gnu.org/licenses/>.
//

syntax = "proto3";

package consensuspb;

message ConsensusRoot {
    uint64 term_id = 1;
    int64  timestamp = 2;

    bytes period_root = 3;
    bytes event_root = 4;
    bytes report_root = 5;
}


message CouncilRoot {
    uint32 phase_num = 1;
    bytes  participator_root = 2;
    bytes  miner_root = 3;
    bytes  height_root = 4;
    bytes  content = 5;
}
